# JSCRM-14 FE Group Form
fix(backend): add missing 'description' field to Group entity and TO

fix(frontend): update client API
